# Cruz

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  README.txt
.github/workflows/: website.yml
modules/: CMakeLists.txt  CMakePresets.json  build.py  build.sh
modules/cruz-core/: CMakeLists.txt
modules/cruz-core/src/: Renderer.cpp  Renderer.h
modules/cruz-core/src/cruz/rendering/: rendering_backend.h
modules/cruz-core/src/cruz/rendering/backends/opengl/: CMakeLists.txt  gl_backend.cpp
modules/cruz-core/src/cruz/rendering/backends/webgl/: CMakeLists.txt  webgl_backend.cpp  webgl_backend.h
modules/cruz-gui/: CMakeLists.txt
modules/cruz-gui/scripts/: build.sh
modules/cruz-gui/src/: main.cpp
scripts/: build.py  build.sh
src/CruzEditor/src/: main.cpp
src/CruzEngine/: CMakeLists.txt
src/CruzEngine/cmake/: config.cmake
src/CruzEngine/src/cruz/core/: application.cpp  application.h  camera.cpp  camera.h  definitions.h  mat4.cpp  mat4.h  orthographic_camera.cpp  orthographic_camera.h  platform.h  rendering_backend.h  shader.h  time.cpp  time.h  vector.cpp  vector.h  vertex.h
src/CruzEngine/src/cruz/platform/web/: CMakeLists.txt  web_platform.cpp  web_platform.h
src/CruzEngine/src/cruz/platform/win32/: CMakeLists.txt  windows_platform.cpp  windows_platform.h
src/CruzEngine/src/cruz/rendering/: rendering_backend.h
src/CruzEngine/src/cruz/rendering/backends/opengl/: gl_backend.cpp  gl_backend.h  gl_shader.cpp
src/CruzEngine/src/cruz/rendering/backends/webgl/: webgl_backend.cpp  webgl_backend.h  webglshader.cpp
src/CruzEngine/src/cruz/rendering/opengl/: gl_backend.cpp  gl_backend.h  glshader.cpp  glshader.h
src/CruzEngine/src/cruz/rendering/renderers/primitive/: CMakeLists.txt  primitive_renderer.cpp  primitive_renderer.h
src/CruzEngine/src/cruz/rendering/webgl/: webgl_backend.cpp  webgl_backend.h  webglshader.h
src/cruz-gui/: CMakeLists.txt
website/: index.html
www/: index.html
www/editor/: CruzGui.js  CruzGui.wasm  index.html
